--- a/app.scss
+++ b/app.scss
@@ -1,6 +1,89 @@
 $fa-font-path: "node_modules/font-awesome/fonts";
 @import 'node_modules/font-awesome/scss/font-awesome.scss';
+@import 'node_modules/react-redux-toastr/src/styles/index.scss';
+
+.m_t_100 {
+  margin-top: 100px;
+}
+
+.m_t_10 {
+  margin-top: 10px;
+}
 
 body {
-  background-color: green;
+  overflow-y: auto;
+}
+
+.dropdown {
+  .dropbtn {
+  background-color: #fff;
+  color: #000;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+ a {
+   cursor: pointer;
+ }
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #fff;
+}
+
+.searchBox {
+  font-size: 16px;
+  padding: 14px 20px 12px 20px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  width: 100%;
+}
+
+.searchBox:focus {outline: 3px solid #ddd;}
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  width: 100%;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+a:hover {background-color: #ddd}
+
+.show {display:block;}
+
+.hide {display: none;}
+}
+
+.armyTable {
+  th, td {
+    text-align: center;
+    font-size: 16px;
+  }
+  .fa-close {
+    cursor: pointer;
+  }
+}
+
+.result_container {
+  margin-top: 250px;
+  text-align: center;
+}
+
+.btn_add {
+  padding: 15px;
+  text-align: center;
 }
